# f1-store-1

./: docker-compose.yml  pyproject.toml
.github/workflows/: backend-rds-pipeline.yml  backend-redis-pipeline.yml  backend_rds-pipeline.yml  ci-cd-pipeline.yml  frontend-pipeline.yml
backend_rds/: Dockerfile
backend_rds/core/: views.py
backend_rds/tests/: test_backend_rds.py
backend_redis/: Dockerfile
backend_redis/core/: views.py
backend_redis/tests/: test_backend_redis.py
frontend/: Dockerfile
frontend/tests/: test_frontend.py
